# fetch-job-offers

./: .gitignore  CLAUDE.md  README.md  job_fetcher.py  linkedin_jobs.xlsx  main.py  pyproject.toml  setup.py
src/fetch_job_offers/: __init__.py  config.py
src/fetch_job_offers/agents/: cover_letter_agent.py  cv_analyzer_agent.py  orchestrator.py
src/fetch_job_offers/models/: schemas.py
src/fetch_job_offers/tools/: cv_reader.py  dedup_tracker.py  email_tool.py  linkedin_scraper.py  training_store.py
